create react app

--- a/package.json
+++ b/package.json
@@ -1,23 +1,47 @@
 {
   "name": "nisum-test-react",
-  "version": "1.0.0",
-  "description": "React Admin / JSON Server test",
-  "main": "index.js",
-  "scripts": {
-    "test": "npm test",
-    "server": "json-server --watch server/data.json --port 3001"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/pamearteaga/nisum-test-react.git"
-  },
-  "author": "Pamela Arteaga",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/pamearteaga/nisum-test-react/issues"
-  },
-  "homepage": "https://github.com/pamearteaga/nisum-test-react#readme",
+  "proxy": "http://localhost:3001/",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "json-server": "^0.17.3"
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.32",
+    "@types/react": "^18.2.7",
+    "@types/react-dom": "^18.2.4",
+    "concurrently": "^8.2.0",
+    "json-server": "^0.17.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "server": "json-server --watch server/data.json --port 3001",
+    "dev": "concurrently \"npm run server\" \"npm start\""
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
