--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "nisum-test-react",
-  "proxy": "http://localhost:3001/",
+  "proxy": "http://localhost:3001",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,7 +16,9 @@
     "@types/react-dom": "^18.2.4",
     "concurrently": "^8.2.0",
     "json-server": "^0.17.3",
+    "ra-data-simple-rest": "^4.11.4",
     "react": "^18.2.0",
+    "react-admin": "^4.11.4",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
@@ -23,7 +28,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server --watch server/data.json --port 3001",
+    "server": "json-server --watch server/data.json --port 3001 --middlewares server/range.js",
     "dev": "concurrently \"npm run server\" \"npm start\""
   },
   "eslintConfig": {
